[package]
name = "murmuration"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[features]
default = ["change_detection"]
change_detection = []

[dependencies]
bevy_app = { git = "https://github.com/james-j-obrien/bevy", rev = "4ddbb940b51847f15fc4bc414fcebc0d8f1dfb75", default-features = false }
bevy_ecs = { git = "https://github.com/james-j-obrien/bevy", rev = "4ddbb940b51847f15fc4bc414fcebc0d8f1dfb75", default-features = false }
bevy_log = { git = "https://github.com/james-j-obrien/bevy", rev = "4ddbb940b51847f15fc4bc414fcebc0d8f1dfb75", default-features = false }
bevy_transform = { git = "https://github.com/james-j-obrien/bevy", rev = "4ddbb940b51847f15fc4bc414fcebc0d8f1dfb75", default-features = false }
murmuration_octree = { path = "crates/murmuration_octree", features = ["bevy_transform"] }

[dev-dependencies]
bevy = { git = "https://github.com/james-j-obrien/bevy", rev = "4ddbb940b51847f15fc4bc414fcebc0d8f1dfb75" }
rand = "0.8.5"

[[example]]
name = "within"
