[package]
name = "murmuration"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[features]
default = ["change_detection"]
change_detection = []

[dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false }
murmuration_octree = { path = "crates/murmuration_octree", features = ["bevy_transform"] }

[dev-dependencies]
bevy = "0.14.0-rc.3"
rand = "0.8.5"

[[example]]
name = "within"
